// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`page > 1 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-start-start searchable"
>
  <div
    className="searchables flex-100 layout-row layout-align-end-center searchable_header"
  >
    <div
      className="input_box_full flex-40 layout-row layout-align-end-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search Contacts"
        type="text"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-wrap layout-row layout-align-start-start searchable_section"
  >
    <AdminClientTile
      client={
        Object {
          "company_name": "FOO_COMPANY_NAME",
          "email": "FOO_EMAIL@mehr.de",
          "first_name": "FOO_FIRST_NAME",
          "last_name": "FOO_LAST_NAME",
          "primary": 2,
        }
      }
      deleteFn={null}
      deleteable={false}
      flexClasses="flex-45 flex-gt-sm-33"
      handleClick={[Function]}
      handleCollapser={null}
      key="UUID_MOCK_KEY_2"
      navFn={null}
      showTooltip={false}
      t={[Function]}
      target=""
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      tooltip=""
    />
    <AdminClientTile
      client={
        Object {
          "company_name": "BAR_COMPANY_NAME",
          "email": "BAR_EMAIL@mehr.de",
          "first_name": "BAR_FIRST_NAME",
          "last_name": "BAR_LAST_NAME",
          "primary": 1,
        }
      }
      deleteFn={null}
      deleteable={false}
      flexClasses="flex-45 flex-gt-sm-33"
      handleClick={[Function]}
      handleCollapser={null}
      key="UUID_MOCK_KEY_3"
      navFn={null}
      showTooltip={false}
      t={[Function]}
      target=""
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      tooltip=""
    />
  </div>
  <div
    className="flex-95 layout-row layout-align-center-center pagination_buttons"
  >
    <div
      className="
              flex-15 layout-row layout-align-center-center pointy
              navigation_button 
            "
      onClick={[Function]}
    >
      <i
        className="fa fa-chevron-left"
      />
      <p
        className="back"
      >
        Back
      </p>
    </div>
    <p>
      2
       
      /
       
      1
       
    </p>
    <div
      className="
              flex-15 layout-row layout-align-center-center pointy
              navigation_button disabled
            "
      onClick={null}
    >
      <p
        className="forward"
      >
        Next
      </p>
      <i
        className="fa fa-chevron-right"
      />
    </div>
  </div>
</div>
`;

exports[`shallow render 1`] = `
<div
  className="layout-row flex-100 layout-wrap layout-align-start-start searchable"
>
  <div
    className="searchables flex-100 layout-row layout-align-end-center searchable_header"
  >
    <div
      className="input_box_full flex-40 layout-row layout-align-end-center"
    >
      <input
        name="search"
        onChange={[Function]}
        placeholder="Search Contacts"
        type="text"
      />
    </div>
  </div>
  <div
    className="flex-100 layout-wrap layout-row layout-align-start-start searchable_section"
  >
    <AdminClientTile
      client={
        Object {
          "company_name": "FOO_COMPANY_NAME",
          "email": "FOO_EMAIL@mehr.de",
          "first_name": "FOO_FIRST_NAME",
          "last_name": "FOO_LAST_NAME",
          "primary": 2,
        }
      }
      deleteFn={null}
      deleteable={false}
      flexClasses="flex-45 flex-gt-sm-33"
      handleClick={[Function]}
      handleCollapser={null}
      key="UUID_MOCK_KEY_0"
      navFn={null}
      showTooltip={false}
      t={[Function]}
      target=""
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      tooltip=""
    />
    <AdminClientTile
      client={
        Object {
          "company_name": "BAR_COMPANY_NAME",
          "email": "BAR_EMAIL@mehr.de",
          "first_name": "BAR_FIRST_NAME",
          "last_name": "BAR_LAST_NAME",
          "primary": 1,
        }
      }
      deleteFn={null}
      deleteable={false}
      flexClasses="flex-45 flex-gt-sm-33"
      handleClick={[Function]}
      handleCollapser={null}
      key="UUID_MOCK_KEY_1"
      navFn={null}
      showTooltip={false}
      t={[Function]}
      target=""
      theme={
        Object {
          "colors": Object {
            "primary": "#333",
            "secondary": "#fafafa",
          },
        }
      }
      tooltip=""
    />
  </div>
  <div
    className="flex-95 layout-row layout-align-center-center pagination_buttons"
  >
    <div
      className="
              flex-15 layout-row layout-align-center-center pointy
              navigation_button disabled
            "
      onClick={null}
    >
      <i
        className="fa fa-chevron-left"
      />
      <p
        className="back"
      >
        Back
      </p>
    </div>
    <p>
      1
       
      /
       
      1
       
    </p>
    <div
      className="
              flex-15 layout-row layout-align-center-center pointy
              navigation_button disabled
            "
      onClick={null}
    >
      <p
        className="forward"
      >
        Next
      </p>
      <i
        className="fa fa-chevron-right"
      />
    </div>
  </div>
</div>
`;
